--- a/misc/course.html
+++ b/misc/course.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Welcome to my Website</h1>
+        <nav>
+            <ul>
+                <li>Courses</li>
+                <li>School</li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
