add anchor tags to the navigation list elements for all HTML files

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <h1>Welcome to my Website</h1>
         <nav>
             <ul>
-                <li>Courses</li>
-                <li>School</li>
+                <li><a href="misc/course.html">Courses</a></li>
+                <li><a href="misc/school.html">School</a></li>
             </ul>
         </nav>
     </header>
