--- a/misc/course.html
+++ b/misc/course.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to my Website</h1>
+        <h1>My School Courses</h1>
         <nav>
             <ul>
-                <li>Courses</li>
-                <li>School</li>
+                <li><a href="../index.html">About Me</a></li>
+                <li><a href="school.html">School</a></li>
             </ul>
         </nav>
     </header>
