--- a/misc/school.html
+++ b/misc/school.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to my Website</h1>
+        <h1>BCIT Logo</h1>
         <nav>
             <ul>
-                <li>Courses</li>
-                <li>School</li>
+                <li><a href="../index.html">About Me</a></li>
+                <li><a href="course.html">Courses</a></li>
             </ul>
         </nav>
     </header>
