--- a/misc/course.html
+++ b/misc/course.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="../css/stylesheet.css">
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <h1>My School Courses</h1>
@@ -17,5 +19,18 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <ul>
+            <li>ACIT 1620</li>
+            <li>
+                <a href="https://www.bcit.ca/outlines/20223048461/">ACIT 1515</a>
+            </li>
+            <li>ACIT 1420</li>
+        </ul>
+    </main>
+    <footer>
+        <p>Copyright data</p>
+    </footer>
 </body>
+
 </html>
