--- a/misc/school.html
+++ b/misc/school.html
@@ -17,5 +17,11 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <a href="https://www.bcit.ca/"><img src="../images/bcit_logo.png" alt="BCIT logo" width="260" height="230"></a>
+    </main>
+    <footer>
+        <p>Copyright data</p>
+    </footer>
 </body>
 </html>
