Complete both school.html and course.html

--- a/misc/school.html
+++ b/misc/school.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="../css/stylesheet.css">
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <h1>BCIT Logo</h1>
@@ -18,10 +20,12 @@
         </nav>
     </header>
     <main>
-        <a href="https://www.bcit.ca/"><img src="../images/bcit_logo.png" alt="BCIT logo" width="260" height="230"></a>
+        <a href="https://www.bcit.ca/"><img src="../images/bcit_logo.png" alt="BCIT logo"
+                width="260" height="230"></a>
     </main>
     <footer>
         <p>Copyright data</p>
     </footer>
 </body>
+
 </html>
