complete styling for header elements in all html documents

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to my Website</h1>
+        <h1 class="index-h1">Welcome to my Website</h1>
         <nav>
-            <ul>
+            <ul class="list-style">
                 <li><a href="misc/course.html">Courses</a></li>
                 <li><a href="misc/school.html">School</a></li>
             </ul>
