complete styling for footer elements in all html documents

--- a/misc/school.html
+++ b/misc/school.html
@@ -13,7 +13,7 @@
     <header>
         <h1>BCIT Logo</h1>
         <nav>
-            <ul>
+            <ul class="list-style">
                 <li><a href="../index.html">About Me</a></li>
                 <li><a href="course.html">Courses</a></li>
             </ul>
