--- a/misc/course.html
+++ b/misc/course.html
@@ -13,7 +13,7 @@
     <header>
         <h1>My School Courses</h1>
         <nav>
-            <ul>
+            <ul class="list-style">
                 <li><a href="../index.html">About Me</a></li>
                 <li><a href="school.html">School</a></li>
             </ul>
