complete grid styling for main content in index.html

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         </nav>
     </header>
     <main>
-        <section>
-            <h2>About Me</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>Sed enim ut sem viverra aliquet eget sit amet tellus. Volutpat diam ut venenatis tellus in metus vulputate eu scelerisque. Vitae ultricies leo integer malesuada nunc. Leo urna molestie at elementum. Nunc vel risus commodo viverra maecenas accumsan lacus vel. Morbi tristique senectus et netus et malesuada fames. Faucibus interdum posuere lorem ipsum dolor. Cursus turpis massa tincidunt dui ut ornare. Nisl pretium fusce id velit ut tortor. Et ligula ullamcorper malesuada proin. Tortor pretium viverra suspendisse potenti nullam ac tortor vitae.</p>
-            <figure>
-                <img src="images/my_image.jpg" alt="Grey Kitten" width="333" height="333">
+        <section class="grid-container">
+            <h2 class="header-item">About Me</h2>
+            <p class="para-item1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p class="para-item2">Sed enim ut sem viverra aliquet eget sit amet tellus. Volutpat diam ut venenatis tellus in metus vulputate eu scelerisque. Vitae ultricies leo integer malesuada nunc. Leo urna molestie at elementum. Nunc vel risus commodo viverra maecenas accumsan lacus vel. Morbi tristique senectus et netus et malesuada fames. Faucibus interdum posuere lorem ipsum dolor. Cursus turpis massa tincidunt dui ut ornare. Nisl pretium fusce id velit ut tortor. Et ligula ullamcorper malesuada proin. Tortor pretium viverra suspendisse potenti nullam ac tortor vitae.</p>
+            <figure class="img-item">
+                <img src="images/my_image.jpg" alt="Grey Kitten" width="233" height="233">
             </figure>
         </section>
     </main>
