--- a/misc/course.html
+++ b/misc/course.html
@@ -20,13 +20,15 @@
         </nav>
     </header>
     <main>
-        <ul>
-            <li>ACIT 1620</li>
-            <li>
-                <a href="https://www.bcit.ca/outlines/20223048461/">ACIT 1515</a>
-            </li>
-            <li>ACIT 1420</li>
-        </ul>
+        <article>
+            <a href="https://www.bcit.ca/outlines/20223048467/">ACIT 1620 - Fundamental Web Technologies</a>
+        </article>
+        <article>
+            <a href="https://www.bcit.ca/outlines/20223048461/">ACIT 1515 - Scripting for IT</a>
+        </article>
+        <article>
+            <a href="https://www.bcit.ca/outlines/20223048460/">ACIT 1420 - Introduction to Systems Administration</a>
+        </article>
     </main>
     <footer>
         <p>Copyright data</p>
