Add list styling to the media query and adjust class names

--- a/misc/course.html
+++ b/misc/course.html
@@ -20,17 +20,17 @@
         </nav>
     </header>
     <main>
-        <article class="course-card1 grid-container2">
+        <article class="course-card1 course-grid-container">
             <a href="https://www.bcit.ca/outlines/20223048467/" class="course-link">ACIT 1620 - Fundamental Web Technologies</a>
             <p class="semester">Fall 2020</p>
             <p class="course-description">This course introduces the fundamental principles and techiniques for designing and developing effective Web sites.</p>
         </article>
-        <article class="course-card2 grid-container2">
+        <article class="course-card2 course-grid-container">
             <a href="https://www.bcit.ca/outlines/20223048461/" course-link>ACIT 1515 - Scripting for IT</a>
             <p class="semester">Fall 2020</p>
             <p class="course-description">The course introduces the fundamental concepts of programming for IT professionals, with a focus on scripting languages that are commonly found in the workplace.</p>
         </article>
-        <article class="course-card3 grid-container2">
+        <article class="course-card3 course-grid-container">
             <a href="https://www.bcit.ca/outlines/20223048460/" course-link>ACIT 1420 - Introduction to Systems Administration</a>
             <p class="semester">Fall 2020</p>
             <p class="course-description">This course introduces students to the configuration, maintenance, and administration of a Windows Laptop/computer.</p>
