correct spelling in course.html paragraph element

--- a/misc/course.html
+++ b/misc/course.html
@@ -23,7 +23,7 @@
         <article class="course-card1 course-card-container">
             <a href="https://www.bcit.ca/outlines/20223048467/" class="course-link">ACIT 1620 - Fundamental Web Technologies</a>
             <p class="semester">Fall 2020</p>
-            <p class="course-description">This course introduces the fundamental principles and techiniques for designing and developing effective Web sites.</p>
+            <p class="course-description">This course introduces the fundamental principles and techniques for designing and developing effective Web sites.</p>
         </article>
         <article class="course-card2 course-card-container">
             <a href="https://www.bcit.ca/outlines/20223048461/" course-link>ACIT 1515 - Scripting for IT</a>
